Fix broken in newer chrome

--- a/main.sass
+++ b/main.sass
@@ -36,10 +36,6 @@ $footer: $footer-top + $footer-bottom + $footer-h
 html
     height: 100%
     font-size: 16px
-    @media (max-device-width: 1036px) and (min-device-width: 500px)
-        font-size: 28px
-    @media (max-device-width: 500px)
-        font-size: 36px
 
 body
     height: 100%
